# PurpleSDL

./: CMakeLists.txt  run.bat
src/: BattleState.cpp  BlackjackDialog.cpp  FlyLocation.cpp  Main.cpp  OverworldGui.cpp  SpriteManager.cpp  TextRenderer.cpp
